gke/course/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: seedimage-svc
spec:
  type: ClusterIP
  selector:
    app: seedimage
  ports:
    - port: 80
      protocol: TCP
      targetPort: 3000
